--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,9 @@
-<h2>Hello World</h2>
-<h1>Ingeniería de Software</h1>
-<h1>Grupo 37</h1>
+<h1>Hello World</h1>
+<h2>Ingeniería de Software</h2>
+<h2>Grupo 37</h2>
+<h3>Carlos Fuentes</h3>
+<h3>Jose Luco</h3>
+<h3>Victor Marambio</h3>
 <p>
   The time is now: <%= Time.now %>
 </p>
