Home Page, Sign Up, Log in y Log out

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -21,9 +21,21 @@
     <%= f.label :email %><br>
     <%= f.text_field :email %>
   </div>
+
+  <div class="field">
+    <%= f.label :password %><br>
+    <%= f.text_field :password %>
+  </div>
+  <div class="field">
+    <%= f.label :password_confirmation %><br>
+    <%= f.text_field :password_confirmation %>
+  </div>
+
   <div class="actions">
     <%= f.submit 'Guardar cambios' %>
   </div>
+
 <% end %>
 
-<%= link_to 'Atras', users_path %>
+<li><%= link_to "Atras", :back %></li>
+<li><%= link_to "Inicio", root_url %></li>
