--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,7 @@
-<html>
-<head>
-  <title>Grupo 37</title>
-</head>
-<body>
+<h1>Perfil de Usuario</h1>
+
   <%= @usuario.nombre %>
   <%= @usuario.email %>
-</body>
-</html>
+
+<li><%= link_to "Atras", :back %></li>
+<li><%= link_to "Inicio", root_url %></li>
