--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,1 +1,7 @@
-"<h1>Hello World</h1>" 
+<h1>Grupo 37</h1>
+  <h2>Creado por: </h2>
+    <h3>Carlos Fuentes</h3>
+    <h3>Victor Marambio</h3>
+    <h3>Jose Luco</h3><br>
+
+<%= link_to 'Iniciar sesión', login_path %>
