--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -26,8 +26,10 @@
       <%end%>
     </table>
 
-    <%= link_to 'Nuevo usuario', new_user_path %>
-    <%= link_to 'Registrar', '/signup' %>
+    <li><%= link_to 'Registrarse', '/signup' %>
+    <li><%= link_to 'Iniciar sesión', login_path %></li>
+    <li><%= link_to "Atras", :back %></li>
+    <li><%= link_to "Inicio", root_url %></li>
 
   </body>
 </html>
