--- a/app/views/forums/index.html.haml
+++ b/app/views/forums/index.html.haml
@@ -6,4 +6,9 @@
     by
     = forum.user.name
 
-= link_to "Nuevo Foro", new_forum_path
+- if user_signed_in?
+  = link_to "Nuevo Foro", new_forum_path
+  = link_to "Cerrar Sesión", destroy_user_session_path, :method => :delete
+- else
+  = link_to "Iniciar Sesión", new_user_session_path
+  = link_to "Registrarse", new_user_registration_path
