--- a/app/views/comments/_comment.html.haml
+++ b/app/views/comments/_comment.html.haml
@@ -1,5 +1,5 @@
 .comment
   %b= comment.user.name + ':'
   %p= comment.comment
-  = link_to "Editar", edit_post_comment_path(comment.post, comment)
-  = link_to "Eliminar", [comment.post, comment], method: :delete, data: { confirm: "¿Estás Seguro?"}
+  = link_to "Editar", edit_forum_post_comment_path(comment.post, comment)
+  = link_to "Eliminar", forum_post_comment_path(comment.post, comment), method: :delete, data: { confirm: "¿Estás Seguro?"}
