--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,3 +1,3 @@
-= simple_form_for([@post, @post.comments.build]) do |f|
+= simple_form_for([@forum, @post, @post.comments.build]) do |f|
   = f.input :comment, label: 'Comentario '
   = f.submit
