--- a/app/views/forums/show.html.haml
+++ b/app/views/forums/show.html.haml
@@ -2,6 +2,11 @@
 %h2= @forum.topic
 %p= @forum.description
 
+#posts
+= render @forum.posts
+
+= render "posts/form"
+
 = link_to "Editar", edit_forum_path(@forum)
 = link_to "Eliminar", forum_path(@forum), method: :delete, data: { confirm: "¿Estás seguro que quieres eliminar este foro?"}
 = link_to "Inicio", forums_path
