--- a/app/views/posts/edit.html.haml
+++ b/app/views/posts/edit.html.haml
@@ -1,5 +1,6 @@
 %h1 Editar Post
 
-= render 'form'
-
-= link_to "Cancelar", post_path
+= simple_form_for([@forum, @post]) do |f|
+  = f.input :title, label: 'Titulo'
+  = f.input :content, label: 'Contenido'
+  = f.submit
