--- a/app/views/forums/index.html.haml
+++ b/app/views/forums/index.html.haml
@@ -1,5 +1,10 @@
 %h1 Foros - Grupo 37
 
+= form_tag(forums_path, method: :get, id: "search-form") do
+  = text_field_tag :search, params[:search], placeholder: "Search Posts"
+  = submit_tag "Search"
+
+
 - @forums.each do |forum|
   %h2= link_to forum.title, forum
   %p
