--- a/app/views/posts/_form.html.haml
+++ b/app/views/posts/_form.html.haml
@@ -1,4 +1,5 @@
 = simple_form_for([@forum, @forum.posts.build]) do |f|
-  = f.input :title, label: 'Titulo'
-  = f.input :content, label: 'Contenido'
-  = f.submit
+  = f.input :title, label: 'Titulo', input_html: { class: "form-control"}
+  = f.input :content, label: 'Contenido', input_html: { class: "form-control"}
+  %br
+  = f.button :submit
