--- a/app/views/comments/_form.html.haml
+++ b/app/views/comments/_form.html.haml
@@ -1,3 +1,4 @@
 = simple_form_for([@forum, @post, @post.comments.build]) do |f|
-  = f.input :comment, label: 'Comentario '
-  = f.submit
+  = f.input :comment, label: 'Comentario ', input_html: { class: "form-control"}
+  %br/
+  = f.button :submit
