--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -1,14 +1,20 @@
-%h1= @post.title
-%p= @post.content
+#posts
+  .post
+    %h2= @post.title
+    %h3= @post.content
+
+    %br
+    = link_to "Editar", edit_forum_post_path(@forum, @post), class: "btn btn-sm btn-default"
+    = link_to "Eliminar", forum_post_path(@forum, @post), method: :delete, data: { confirm: "¿Estás Seguro?"}, class: "btn btn-sm btn-default"
+
+  .post
+    %b= "Cantidad de comentarios: "
+    %b= @post.comments.count
 
 #comments
-  %h2= "Cantidad de comentarios:"
-  %h2= @post.comments.count
-  = render @post.comments
+  .comment
+    = render @post.comments
+    %br
 
-  %h3 Comentar
-  = render "comments/form"
-
-= link_to "Editar", edit_forum_post_path(@forum, @post)
-= link_to "Eliminar", forum_post_path(@forum, @post), method: :delete, data: { confirm: "¿Estás Seguro?"}
-= link_to "Inicio", root_path
+    %h3 Comentar
+    = render "comments/form"
