--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,7 +16,12 @@
         - else
           %li= link_to "Iniciar Sesión", new_user_session_path
           %li= link_to "Registrarse", new_user_registration_path
+
   .container
+    .form-inline.col-md-offset-6
+      = form_tag search_forums_path, method: :get do
+        = text_field_tag :search, nil, placeholder: "Search", class:"form-control mr-sm-2"
+        = submit_tag "Search", class:"btn btn-light my-2 my-sm-0"
     .col-md-6.col-md-offset-3
       = yield
     %p.notice= notice
