--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,8 @@
       %ul.nav.navbar-nav
         %li= link_to "Inicio", root_path
         - if user_signed_in?
+          %li= link_to "Mi cuenta", profile_path
+          %li= link_to "Usuarios", users_path
           %li= link_to "Nuevo Foro", new_forum_path
           %li= link_to "Cerrar Sesión", destroy_user_session_path, :method => :delete
         - else
