--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -1,4 +1,4 @@
-<p id="notice"><%= notice %></p>
+<!-- <p id="notice"><%= notice %></p>
 
 <p>
   <strong>Title:</strong>
@@ -17,3 +17,30 @@
 
 <%= link_to 'Edit', edit_forum_path(@forum) %> |
 <%= link_to 'Back', forums_path %>
+-->
+<div class="columns">
+  <div class="column is-12">
+    <h1 class="title is-2 has-text-grey discussion-title"><%= @forum.title %></h1>
+    <h3 class="subtitle is-5 has-text-grey-lighter">Topic: <%= @forum.topic %></h3>
+    <div class="level">
+      <div class="level-left"></div>
+      <div class="level-right">
+        <% if has_role?(:admin) %>
+        <div class="buttons">
+            <%= link_to 'Editar Foro', edit_forum_path(@forum), class:'button'%>
+            <%= link_to 'Eliminar', forum_path(@forum), method: :delete, data: { confirm: "Eliminar Foro?" }, class:'button' %>
+        </div>
+        <% end %>
+      </div>
+    </div>
+    <div class="content"><%= @forum.description %></div>
+
+    <div id="forum-posts">
+      <%= render @posts %>
+    </div>
+
+    <hr />
+
+  </div>
+
+</div>
