--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
      <nav class="navbar is-light" role="navigation" aria-label="main navigation">
       <div class="navbar-brand">
         <%= link_to root_path, class:"navbar-item" do %>
-          <h1 class="title is-5">Foro - Grupo 37</h1>
+          <h1 class="title is-5">Grupo 37</h1>
         <% end  %>
       <div class="navbar-burger burger" data-target="navbar">
         <span></span>
