--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -10,7 +10,7 @@
         <p>
           <strong><%= comment.user.username %></strong> <small><%= time_ago_in_words(comment.created_at) %></small>
           <br/>
-          <%= comment.comment %>
+          <%= markdown(comment.comment) %>
         </p>
       </div>
       <% if comment_author(comment) || has_role?(:admin)%>
