--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -1,18 +1,21 @@
-<h1 class="title is-2">Foros</h1>
-
 <div class="level">
-  <div class="level-left"></div>
+  <div class="level-left">
+    <h1 class="title is-2">Foros</h1>
+  </div>
   <div class="level-right">
-    <%= link_to 'Nuevo Foro', new_forum_path, class:'button is-dark' %>
+    <%= form_tag forums_path, :method => 'get' do %>
+      <%= text_field_tag :search, params[:search], options = {style:"height:36px;border-radius:5px;", placeholder:"Buscar Foro"}%>
+      <%= submit_tag "Buscar Foro", class:'button is-dark' %>
+    <% end %>
   </div>
 </div>
 
 <table class="table is-fullwidth">
   <thead>
-    <tr>
-      <th>Foro</th>
+    <!--<tr>
+      <th>Foros</th>
       <th colspan="3"></th>
-    </tr>
+    </tr>-->
   </thead>
   <tbody>
     <% @forums.each do |forum| %>
@@ -34,8 +37,21 @@
   </tbody>
 </table>
 
-<div class="column is-8">
-  <h3 class="title is-5 has-text-grey-light">Ultimos Posts</h3>
+<br />
+
+
+<div class="column is-fullwidth">
+  <div class="level">
+    <div class="level-left">
+      <h3 class="title is-5 has-text-grey-light">Ultimos Posts</h3>
+    </div>
+    <div class="level-right">
+      <%= form_tag forums_path, :method => 'get' do %>
+        <%= text_field_tag :search_p, params[:search_p], options = {style:"height:36px;border-radius:5px;", placeholder:"Buscar Post"} %>
+        <%= submit_tag "Buscar Post", class:'button is-dark'  %>
+      <% end %>
+    </div>
+  </div>
   <div class="posts">
     <% @posts.each do |post| %>
       <div class="columns bb-not-last pv10">
