--- a/app/views/shared/_posts.html.erb
+++ b/app/views/shared/_posts.html.erb
@@ -11,7 +11,7 @@
             <h3 class="title is-5"><%= post.title %></h3>
           <% end %>
           <div class="content">
-            <%= truncate(post.content, length: 140) %>
+            <%= truncate(strip_markdown(post.content), length: 140) %>
             <p><em><small>Posted <%= time_ago_in_words(post.created_at) %> ago in
               <% if post.forum %>
                 <%= link_to post.forum.title, post.forum %>
