--- a/app/views/forums/index.html.erb
+++ b/app/views/forums/index.html.erb
@@ -51,7 +51,7 @@
   </div>
 </div>
 
-<div class="column is-fullwidth">
+<!--<div class="column is-fullwidth">
   <div class="posts">
     <% @posts.each do |post| %>
       <div class="columns bb-not-last pv10">
@@ -84,5 +84,11 @@
 
       </div>
     <% end %>
+  </div>
+</div>-->
+
+<div class="column is-fullwidth">
+  <div class="posts">
+    <%= render @posts %>
   </div>
 </div>
