--- a/app/views/forums/show.html.erb
+++ b/app/views/forums/show.html.erb
@@ -36,6 +36,7 @@
     <div class="content"><%= @forum.description %></div>
 
     <div id="forum-posts">
+      <h3 class="title is-5 has-text-grey-light">Ultimos Posts</h3>
       <%= render @posts %>
     </div>
 
