--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -5,8 +5,11 @@
   <div class="column is-8">
     <h1 class="title is-2 has-text-grey discussion-title"><%= @user.username %></h1>
     <h3 class="subtitle is-5 has-text-grey-lighter">Mail: <%= @user.email %></h3>
+
     <div class="level">
-      <div class="level-left"></div>
+      <div class="level-left">
+        <h3 class="subtitle is-3 has-text-grey">Reputación: <%= @user.reputation_for(:votes).to_i %> puntos</h3> 
+      </div>
       <div class="level-right">
         <% if @user == current_user || has_role?(:admin)%>
         <div class="buttons">
