--- a/app/views/posts/show.html.haml
+++ b/app/views/posts/show.html.haml
@@ -8,7 +8,12 @@
       = link_to "Editar", edit_forum_post_path(@forum, @post), class: "btn btn-sm btn-default"
     - if can? :destroy, @post
       = link_to "Eliminar", forum_post_path(@forum, @post), method: :delete, data: { confirm: "¿Estás Seguro?"}, class: "btn btn-sm btn-default"
-    = link_to "Agregar a Favoritos", favorites_path(@forum, @post.id)
+
+    - if user_signed_in?
+      - unless current_user.favorite_posts.exists?(id: @post.id)
+        = link_to 'Add to favorites', favorite_posts_path(post_id: @post), method: :post
+      - else
+        = link_to 'Remove from favorites', favorite_post_path(@post), method: :delete
 
   .post
     %b= "Cantidad de comentarios: "
