Comments Upvote/Downvote added to Users RP calc

--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -25,23 +25,10 @@
         </div>
 
         <div class="column has-text-right">
-        <% if user_signed_in? %>
           <nav class="level is-mobile">
-            <%= pluralize post.reputation_for(:votes).to_i, "point" %>
-            <div class="level-right">
-              <a class="level-item">
-                <%= link_to vote_post_path(post, type: "up"), method: "post" do %>
-                <span class="icon is-small"><i class="fa fa-thumbs-o-up"></i></span>
-                <% end %>
-              </a>
-              <a class="level-item">
-                <%= link_to vote_post_path(post, type: "down"), method: "post" do %>
-                <span class="icon is-small"><i class="fa fa-thumbs-o-down"></i></span>
-                <% end %>
-              </a>
-            </div>
+            <%= pluralize post.reputation_for(:votes).to_i, "punto" %>
+            <div class="level-right"></div>
           </nav>
-        <% end %>
         <% if post_author(post) || has_role?(:admin)%>
           <%= link_to 'Editar', edit_post_path(post), class:'button' %>
           <%= link_to 'Eliminar', post, method: :delete, data: { confirm: 'Estás seguro?' }, class: "button" %>
