--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,7 +8,7 @@
 
     <div class="level">
       <div class="level-left">
-        <h3 class="subtitle is-3 has-text-grey">Reputación: <%= @user.reputation_for(:votes).to_i %> puntos</h3> 
+        <h3 class="subtitle is-3 has-text-grey">Reputación: <%= @user.reputation_for(:rp).to_i %> puntos</h3> 
       </div>
       <div class="level-right">
         <% if @user == current_user || has_role?(:admin)%>
