--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -13,10 +13,10 @@
           <%= markdown(comment.comment) %>
         </p>
       </div>
-      <% if user_signed_in? && !post_author(@post)%>
         <nav class="level is-mobile">
           <%= pluralize comment.reputation_for(:votes).to_i, "punto" %>
           <div class="level-right">
+            <% if user_signed_in? && !comment_author(comment)%>
             <a class="level-item">
               <%= link_to vote_post_comment_path(comment.post, comment, type: "up"), method: "post" do %>
               <span class="icon is-small"><i class="fa fa-thumbs-o-up fa_custom fa-2x"></i></span>
@@ -28,9 +28,10 @@
               <span class="icon is-small"><i class="fa fa-thumbs-o-down fa_custom fa-2x"></i></span>
               <% end %>
             </a>
+            <a class="level-item"></a>
+            <% end %>
           </div>
         </nav>
-      <% end %>
       <% if comment_author(comment) || has_role?(:admin)%>
       <nav class="level is-mobile">
         <div class="level-left">
