--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -28,6 +28,38 @@
 </div>
 
 <div class="column is-fullwidth">
+  <div id="user-subscribed-forums">
+    <h3 class="title is-5 has-text-grey-light">Foros Suscritos</h3>
+    <table class="table is-fullwidth">
+      <thead>
+        <!--<tr>
+          <th>Foros</th>
+          <th colspan="3"></th>
+        </tr>-->
+      </thead>
+      <tbody>
+        <% @user.subscriptions.each do |forum| %>
+        <tr>
+          <td><%= link_to forum.title, forum %></td>
+          <td><%= forum.topic %></td>
+          <td><%= forum.description %></td>
+          <td>
+            <%if has_role?(:admin)%>
+            <div class="buttons is-right">
+              <%= link_to 'Ver Foro', forum, class:'button' %>
+              <%= link_to 'Editar Foro', edit_forum_path(forum), class:'button' %>
+              <%= link_to 'Eliminar', forum, class:'button is-danger', method: :delete, data: { confirm: "Estás seguro que quieres eliminar este Foro? " } %>
+            </div>
+            <% end %>
+          </td>
+        </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
+
+<div class="column is-fullwidth">
   <div id="user-favorites-posts">
     <h3 class="title is-5 has-text-grey-light">Posts Favoritos</h3>
     <%= render @user.favorites %>
