--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,6 +7,8 @@
       <nav class="level is-mobile">
         <h5><%= %></h5>
         <div class="level-right">
+          <%# SOCIAL SHARE BUTTON  %>
+          <%= social_share_button_tag(@post.title) %>
           <% if user_signed_in? && !post_author(@post)  %>
             <a class="level-item">
               <%= pluralize @post.reputation_for(:votes).to_i, "puntos" %>
