--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require_tree .
+ *= require social-share-button
  *= require_self
  */
 
@@ -38,3 +39,13 @@
  .discussion-title {
    margin-bottom: 0;
  }
+
+ $b_size: 58px;
+
+.social-share-button {
+  .ssb-icon {
+    background-size: $b_size $b_size;
+    height: 50px;
+    width: 50px;
+  }
+}
